--- a/www-ng/src/app/components/app-footer/app-footer.component.html
+++ b/www-ng/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
 <footer class="app-footer">
-  <span><a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="http://coreui.io">CoreUI</a></span>
+  <span><a href="http://fancydemo.com">Demo</a> &copy; 2017 I/O Controls Corp.</span>
+  <span class="ml-auto">Powered by <a href="http://fancydemo.com">I/O</a></span>
 </footer>
