--- a/www-ng/src/app/components/app-header/app-header.component.html
+++ b/www-ng/src/app/components/app-header/app-header.component.html
@@ -6,7 +6,7 @@
   <button class="navbar-toggler d-md-down-none mr-auto" type="button" appSidebarToggler>
     <span class="navbar-toggler-icon"></span>
   </button>
-  <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
+  <!-- <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
 </header>
