--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -1,3 +1,116 @@
 <div class="animated fadeIn">
-  Home page!
+  <div class="row">
+    <div class="col">
+      <tabset>
+        <tab heading="Critical Alert">
+            <table class="table table-bordered table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Bus #</th>
+                    <th>Item</th>
+                    <th>Event Time</th>
+                    <th>Odometer</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>0001</td>
+                    <td>Rear door open failure</td>
+                    <td>2018/01/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0003</td>
+                    <td>ABS fault code</td>
+                    <td>2018/02/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0005</td>
+                    <td>Wiper on failure</td>
+                    <td>2018/02/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0006</td>
+                    <td>Charging failure</td>
+                    <td>2018/03/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0007</td>
+                    <td>Wiper on failure</td>
+                    <td>2018/01/21</td>
+                    <td>12345.6</td>
+                  </tr>
+                </tbody>
+              </table>
+        </tab>
+        <tab heading="General Alert">
+            <table class="table table-bordered table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Bus #</th>
+                    <th>Item</th>
+                    <th>Event Time</th>
+                    <th>Odometer</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>0001</td>
+                    <td>Rear door open failure</td>
+                    <td>2018/01/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0006</td>
+                    <td>Charging failure</td>
+                    <td>2018/03/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0007</td>
+                    <td>Wiper on failure</td>
+                    <td>2018/01/21</td>
+                    <td>12345.6</td>
+                  </tr>
+                </tbody>
+              </table>
+        </tab>
+        <tab heading="Preventive Maint. Notification">
+            <table class="table table-bordered table-striped table-sm">
+                <thead>
+                  <tr>
+                    <th>Bus #</th>
+                    <th>Item</th>
+                    <th>Event Time</th>
+                    <th>Odometer</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>0001</td>
+                    <td>Rear door open failure</td>
+                    <td>2018/01/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0003</td>
+                    <td>ABS fault code</td>
+                    <td>2018/02/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                  <tr>
+                    <td>0005</td>
+                    <td>Wiper on failure</td>
+                    <td>2018/02/01</td>
+                    <td>12345.6</td>
+                  </tr>
+                </tbody>
+              </table>
+        </tab>
+      </tabset>
+    </div>
+  </div>
 </div>
