add google map in fleet page

--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -78,7 +78,7 @@
                 </tbody>
               </table>
         </tab>
-        <tab heading="Preventive Maint. Notification">
+        <tab heading="Preventive Maint.">
             <table class="table table-bordered table-striped table-sm">
                 <thead>
                   <tr>
