--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -19,27 +19,27 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <input
-              type='text'
-              style='padding:8px;margin:15px auto;width:30%;'
-              placeholder='Type to filter the name column...'
-              (keyup)='updateFilter($event)'
-            />
-            <ngx-datatable #table
-              class='material'
-              [columns]="columns"
-              [columnMode]="'force'"
-              [headerHeight]="50"
-              [footerHeight]="50"
-              [rowHeight]="'auto'"
-              [limit]="10"
-              [rows]='rows'>
-            </ngx-datatable>
-          </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <input
+            type='text'
+            style='padding:8px;margin:15px auto;width:30%;'
+            placeholder='Bus No...'
+            (keyup)='updateFilter($event)'
+          />
+          <ngx-datatable #table
+            class='material'
+            [columns]="columns"
+            [columnMode]="'force'"
+            [headerHeight]="50"
+            [footerHeight]="50"
+            [rowHeight]="'auto'"
+            [limit]="10"
+            [rows]='rows'>
+          </ngx-datatable>
         </div>
       </div>
     </div>
