--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
   <div class="row">
     <div class="col">
-      <tabset>
+      <tabset type="pills">
         <tab heading="Critical Alert">
             <table class="table table-bordered table-striped table-sm">
                 <thead>
@@ -78,7 +78,7 @@
                 </tbody>
               </table>
         </tab>
-        <tab heading="Preventive Maint.">
+        <tab heading="Preventive Maint. Notification">
             <table class="table table-bordered table-striped table-sm">
                 <thead>
                   <tr>
