add rxjs extentions file, modify snapshot page to add map and icon list

--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -3,15 +3,16 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
-          <agm-map style="height: 300px" [latitude]="34.650013" [longitude]="-118.139558">
+          <agm-map style="height: 300px" [zoom]=10
+            [latitude]="34.650013" [longitude]="-118.139558">
             <agm-marker-cluster [imagePath]="'https://googlemaps.github.io/js-marker-clusterer/images/m'">
               <agm-marker [latitude]="34.650013" [longitude]="-118.139558">
                 <agm-info-window>0001</agm-info-window>
               </agm-marker>
-              <agm-marker [latitude]="34.750013" [longitude]="-118.339558">
+              <agm-marker [latitude]="34.670013" [longitude]="-118.147558">
                 <agm-info-window>0002</agm-info-window>
               </agm-marker>
-              <agm-marker [latitude]="34.850013" [longitude]="-118.439558">
+              <agm-marker [latitude]="34.690013" [longitude]="-118.149558">
                 <agm-info-window>0003</agm-info-window>
               </agm-marker>
             </agm-marker-cluster>
@@ -41,8 +42,7 @@
             <ngx-datatable-column name="busno">
               <ng-template let-row="row" let-col="column"
                 let-value="value" ngx-datatable-cell-template>
-                <a [routerLink]="['snapshot/', row[col.name]]">{{value}}</a>
-                <!-- <a routerLink="snapshot">{{value}}</a> -->
+                <a [routerLink]="['snapshot', row[col.name]]">{{value}}</a>
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="odometer">
