--- a/www-ng/src/app/views/fleet/snapshot.component.html
+++ b/www-ng/src/app/views/fleet/snapshot.component.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
   <div class="row">
     <div class="col">
-      Snapshot#: {{id$ | async }}
+      Bus No. {{id$ | async }}
     </div>
   </div>
   <div class="row">
@@ -43,11 +43,8 @@
                 <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3">
-              <!-- <div class="card">
-                <div class="card-body text-center"><i class="fa fa-car fa-3x"></i></div>
-              </div> -->
-            </div>
+            <!-- <div class="col-12 col-sm-6 col-lg-3">
+            </div> -->
           </div>
           <div class="row">
             <div class="col-12 col-sm-6 col-lg-3">
@@ -119,19 +116,54 @@
             </div>
             <div class="col-12 col-sm-6 col-md-3 col-xl-1">
               <div class="card m-1">
-                <div class="card-body text-center small">A1</div>
+                <div class="card-body text-center small">B1</div>
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-3 col-xl-1">
               <div class="card m-1">
-                <div class="card-body text-center small">A2</div>
+                <div class="card-body text-center small">B2</div>
               </div>
             </div>
             <div class="col-12 col-sm-6 col-md-3 col-xl-1">
               <div class="card m-1">
-                <div class="card-body text-center small">A3</div>
+                <div class="card-body text-center small">B3</div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-sm-5">
+      <div class="card">
+        <div class="card-body">
+          <ngx-datatable #table
+            class='material'
+            [columns]="cols"
+            [columnMode]="'force'"
+            [headerHeight]="50"
+            [footerHeight]="0"
+            [rowHeight]="'auto'"
+            [limit]="10"
+            [rows]='rows'>
+          </ngx-datatable>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-sm-7">
+      <div class="card">
+        <div class="card-body">
+          <div class="chart-wrapper">
+            <canvas baseChart class="chart"
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColours"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
           </div>
         </div>
       </div>
