--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
   <div class="row">
     <div class="col">
-      Bus No. {{id$ | async }}
+      Alert: {{alert$ | async }}
     </div>
   </div>
   <div class="row">
