--- a/www-ng/src/app/views/alert-list/alert-list.component.html
+++ b/www-ng/src/app/views/alert-list/alert-list.component.html
@@ -17,6 +17,22 @@
             [rowHeight]="'auto'"
             [limit]="10"
             [rows]='rows'>
+            <ngx-datatable-column name="alert">
+              <ng-template let-row="row" let-col="column"
+                let-value="value" ngx-datatable-cell-template>
+                <a [routerLink]="['alert', row['id']]">{{value}}</a>
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="type">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column name="time">
+              <ng-template let-value="value" ngx-datatable-cell-template>
+                {{value}}
+              </ng-template>
+            </ngx-datatable-column>
           </ngx-datatable>
         </div>
       </div>
