--- a/www-ng/src/app/views/fleet/fleet.component.html
+++ b/www-ng/src/app/views/fleet/fleet.component.html
@@ -3,7 +3,7 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
-          <agm-map style="height: 300px" [zoom]=10
+          <agm-map style="height: 300px" [zoom]=10 [streetViewControl]=false
             [latitude]="34.650013" [longitude]="-118.139558">
             <agm-marker-cluster [imagePath]="'https://googlemaps.github.io/js-marker-clusterer/images/m'">
               <agm-marker [latitude]="34.650013" [longitude]="-118.139558">
