--- a/www-ng/src/app/views/data-log/routing.component.html
+++ b/www-ng/src/app/views/data-log/routing.component.html
@@ -4,7 +4,7 @@
       <input
         type='text'
         style='padding:8px;margin:15px auto;width:30%;'
-        placeholder='Fleet Name...'
+        placeholder='Bus No...'
       />
     </div>
   </div>
@@ -12,7 +12,7 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
-          Year Selection
+          Year & Month Selection
         </div>
       </div>
     </div>
