--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -1,13 +1,17 @@
 <div class="animated fadeIn">
  <div class="row">
+   <div class="col">
+     <div class="card">
+       <div class="card-body">
+         Year & Month Selection
+       </div>
+     </div>
+   </div>
+ </div>
+ <div class="row">
     <div class="col">
       <div class="card">
         <div class="card-body">
-          <input
-            type='text'
-            style='padding:8px;margin:15px auto;width:30%;'
-            placeholder='Fleet Name...'
-          />
           <ngx-datatable #table
             class='material'
             [columns]="columns"
