--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -4,7 +4,7 @@
         <i class="fa fa-exclamation-triangle fa-3x"></i>
       </div>
       <div class="col-8 col-sm-5 text-left">
-        <h2>{{alert$ | async}}</h2>
+        <h2>{{alertName$ | async}}</h2>
       </div>
       <div class="col-12 col-sm-6 text-right">
         <button class="btn btn-primary">Acknowledge</button>
@@ -153,7 +153,7 @@
             [footerHeight]="0"
             [rowHeight]="'auto'"
             [limit]="10"
-            [rows]='rowsSnapshot'>
+            [rows]='snapshot$ | async'>
           </ngx-datatable>
         </div>
       </div>
