--- a/www-ng/src/app/views/data-log/maintenance.component.html
+++ b/www-ng/src/app/views/data-log/maintenance.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-head text-center mb-4">
+        <div class="card-header text-center">
           <form [formGroup]="myForm" novalidate>
               <my-date-range-picker name="mydaterange" [options]="myDateRangePickerOptions"
                               formControlName="myDateRange"></my-date-range-picker>
